fix: buttons were not aligned

--- a/app/assets/stylesheets/base/responsive-message-new.scss
+++ b/app/assets/stylesheets/base/responsive-message-new.scss
@@ -16,6 +16,10 @@
 
 @media screen and (max-width: 700px) {
 
+	.deleteIntentionModal .close-modal {
+		margin-top: -80px !important;
+	}
+
 	.messagesHeader .pageHeader {
 		padding-left:20px;
 	}
